# fabrique_studio_test

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
core/: __init__.py  models.py  settings.py  urls.py
iam/migrations/: 0001_initial.py
mailing/: admin.py  message_gateway.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
mailing/migrations/: 0001_initial.py
nginx/: Dockerfile  nginx.conf
prometheus/: prometheus.yml
